Добавлет Contact и Footer
Также добавила в common - сброс стилей на списки (.list) и сcылки (.link), на ссылки добавлен эффект ховера.

Отдельно вынесла паршалы:
- заголовки секций class .title
- кнопки class .button
- соц. иконки .social-list
- форма form

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -44,3 +44,17 @@ textarea {
   width: 1px !important;
   overflow: hidden;
 }
+
+.link {
+  text-decoration: none;
+  color: inherit;
+
+  &:hover,
+  &:focus {
+    color: var(--hover-color);
+  }
+}
+
+.list {
+  list-style-type: none;
+}
