--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -15,14 +15,20 @@ html {
           box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6, ul, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-style: 400;
   font-weight: 400;
   font-size: 16px;
   color: var(--text-color);
@@ -49,6 +55,19 @@ textarea {
   overflow: hidden;
 }
 
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.list {
+  list-style-type: none;
+}
+
+.list:hover, .list:focus {
+  color: var(--hover-color);
+}
+
 :root {
   --bg-color: #E5E5E5;
   /*цвет фона общий*/
@@ -67,5 +86,289 @@ textarea {
   --title-font: "Caveat Brush", cursive;
   /*шрифт для заголовков*/
   --line-height: 1.25;
+}
+
+body {
+  height: 3526px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: #fffff9;
+  background-image: url(../images/background/mobile/hero-mobile-donut@1x.png), url(../images/background/mobile/mobile-bg-top@1x.png), url(../images/background/mobile/mobile-bg-bottom@1x.png), url(../images/background/mobile/footer-mobile-plate@1x.png);
+  background-position: top 0 left 0, top 0 left 0, bottom 216.4px left 0, bottom 0 right 0;
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-size: auto, contain, contain;
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/mobile/hero-mobile-donut@2x.png), url(../images/background/mobile/mobile-bg-top@2x.png), url(../images/background/mobile/mobile-bg-bottom@2x.png), url(../images/background/mobile/footer-mobile-plate@2x.png);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    height: 2652px;
+    background-image: url(../images/background/tablet/hero-tablet-donut@1x.png), url(../images/background/tablet/tablet-bg-top@1x.png), url(../images/background/tablet/registration-tablet-confetti@1x.png), url(../images/background/tablet/footer-tablet-plate@1x.png), url(../images/background/tablet/tablet-bg-bottom@1x.png);
+    background-position: top 0 left 254px, top 0 left 0, bottom 298.32px right 0, bottom 0 right 0, bottom 63.01px left 0;
+    background-size: auto, contain, auto;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/tablet/hero-tablet-donut@2x.png), url(../images/background/tablet/tablet-bg-top@2x.png), url(../images/background/tablet/registration-tablet-confetti@2x.png), url(../images/background/tablet/footer-tablet-plate@2x.png) url(../images/background/tablet/tablet-bg-bottom@2x.png);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  body {
+    height: 3171px;
+    background-image: url(../images/background/desktop/hero-desktop-donut@1x.png), url(../images/background/desktop/desktop-bg-top@1x.png), url(../images/background/desktop/registration-desktop-confetti@1x.png), url(../images/background/desktop/footer-desktop-plate@1x.png), url(../images/background/desktop/desktop-bg-bottom@1x.png);
+    background-position: top 0 right 0, top 0 left 0, bottom 219.36px right 0, bottom 0 right 0, bottom -10px left 0;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/desktop/hero-desktop-donut@2x.png), url(../images/background/desktop/desktop-bg-top@2x.png), url(../images/background/desktop/registration-desktop-confetti@2x.png), url(../images/background/desktop/footer-desktop-plate@2x.png), url(../images/background/desktop/desktop-bg-bottom@2x.png);
+  }
+}
+
+.title {
+  font-family: var(--title-font);
+  font-size: 24px;
+  line-height: 2.71;
+  text-align: center;
+  color: var(--text-color);
+}
+
+@media screen and (min-width: 1280px) {
+  .title {
+    font-size: 36px;
+  }
+}
+
+.contact {
+  padding-bottom: 47px;
+}
+
+@media screen and (min-width: 769px) {
+  .contact {
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .contact {
+    padding-bottom: 82px;
+  }
+}
+
+.contact__text {
+  line-height: 4.06;
+  text-align: center;
+}
+
+@media screen and (min-width: 1280px) {
+  .contact__text {
+    font-size: 18px;
+  }
+}
+
+.form__input {
+  display: block;
+  margin: auto;
+  width: 265px;
+  height: 22px;
+  border: none;
+  border-bottom: 1px solid var(--form-bg);
+  color: var(--form-bg);
+  background-color: transparent;
+}
+
+.form__input:first-child {
+  margin-bottom: 25px;
+}
+
+.form__input::-webkit-input-placeholder {
+  line-height: var(--line-height);
+  color: rgba(171, 129, 108, 0.5);
+}
+
+.form__input:-ms-input-placeholder {
+  line-height: var(--line-height);
+  color: rgba(171, 129, 108, 0.5);
+}
+
+.form__input::-ms-input-placeholder {
+  line-height: var(--line-height);
+  color: rgba(171, 129, 108, 0.5);
+}
+
+.form__input::placeholder {
+  line-height: var(--line-height);
+  color: rgba(171, 129, 108, 0.5);
+}
+
+.form__input:focus {
+  outline: none;
+}
+
+@media screen and (min-width: 769px) {
+  .form__input {
+    width: 410px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .form__input {
+    width: 430px;
+  }
+}
+
+.button {
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-top: 37px;
+  width: 145px;
+  height: 40px;
+  background-color: var(--form-bg);
+  border: none;
+  border-radius: 25px;
+  font-family: var(--title-font);
+  font-size: 18px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 1280px) {
+  .button {
+    font-size: 24px;
+  }
+}
+
+.footer {
+  padding-bottom: 19px;
+}
+
+@media screen and (min-width: 769px) {
+  .footer {
+    padding-left: 67px;
+    padding-right: 67px;
+    padding-bottom: 21px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    padding-left: 229px;
+    padding-right: 229px;
+  }
+}
+
+.footer-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 16px;
+  line-height: var(--line-height);
+}
+
+.footer-contact__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-contact__link:hover .footer-contact__icon-tel,
+.footer-contact__link:focus .footer-contact__icon-tel,
+.footer-contact__link:hover .footer-contact__icon-local,
+.footer-contact__link:focus .footer-contact__icon-local {
+  fill: var(--hover-color);
+}
+
+.footer-contact__icon-tel {
+  width: 13px;
+  height: 13px;
+  margin-right: 3px;
+}
+
+.footer-contact__icon-local {
+  width: 11px;
+  height: 14px;
+  margin-right: 3px;
+}
+
+.social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 34px;
+}
+
+.social__item {
+  margin-right: 9px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__item {
+    margin-right: 12px;
+  }
+}
+
+.social__item:last-child {
+  margin-right: 0;
+}
+
+.social__icon {
+  height: 15px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon {
+    height: 19px;
+  }
+}
+
+.social__icon-twitter {
+  width: 19px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon-twitter {
+    width: 24px;
+  }
+}
+
+.social__icon-instagram {
+  width: 15px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon-instagram {
+    width: 19px;
+  }
+}
+
+.social__icon-facebook {
+  width: 8px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon-facebook {
+    width: 10px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
