--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,9 @@
 @import './common';
 @import './variables';
 @import './body';
+@import './title';
+@import './contact';
+@import './form';
+@import './button';
+@import './footer';
+@import './social-list';
