--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,11 +1,25 @@
 <section class="contact">
   <div class="container">
-    <h2 class="title">Contact</h2>
+    <h2 class="title" id="contacts">Contact</h2>
     <p class="contact__text">We will answer any question!</p>
 
     <form class="form">
-      <input class="form__input" type="email" name="email" placeholder="Email" required />
-      <input class="form__input" type="text" name="question" placeholder="Type your question" />
+      <input
+        class="form__input"
+        type="email"
+        name="email"
+        placeholder="Email"
+        minlength="4"
+        required
+      />
+      <input
+        class="form__input"
+        type="text"
+        name="question"
+        placeholder="Type your question"
+        required
+        minlength="4"
+      />
       <button type="submit" class="button">Send</button>
     </form>
   </div>
