--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -9,6 +9,10 @@
     color: var(--form-bg);
     background-color: transparent;
 
+    &:-webkit-autofill {
+      transition-delay: 3600s;
+    }
+
     &:first-child {
       margin-bottom: 25px;
     }
@@ -20,6 +24,10 @@
 
     &:focus {
       outline: none;
+    }
+
+    &:not(:placeholder-shown):required:invalid {
+      border-color: red;
     }
 
     @media screen and (min-width: 769px) {
