--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -15,14 +15,20 @@ html {
           box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6, ul, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-style: 400;
   font-weight: 400;
   font-size: 16px;
   color: var(--text-color);
@@ -67,5 +73,64 @@ textarea {
   --title-font: "Caveat Brush", cursive;
   /*шрифт для заголовков*/
   --line-height: 1.25;
+}
+
+body {
+  height: 3526px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: #fffff9;
+  background-image: url(../images/background/mobile/hero-mobile-donut@1x.png), url(../images/background/mobile/mobile-bg-top@1x.png), url(../images/background/mobile/mobile-bg-bottom@1x.png), url(../images/background/mobile/footer-mobile-plate@1x.png);
+  background-position: top 0 left 0, top 0 left 0, bottom 216.4px left 0, bottom 0 right 0;
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-size: auto, contain, contain;
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/mobile/hero-mobile-donut@2x.png), url(../images/background/mobile/mobile-bg-top@2x.png), url(../images/background/mobile/mobile-bg-bottom@2x.png), url(../images/background/mobile/footer-mobile-plate@2x.png);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    height: 2652px;
+    background-image: url(../images/background/tablet/hero-tablet-donut@1x.png), url(../images/background/tablet/tablet-bg-top@1x.png), url(../images/background/tablet/registration-tablet-confetti@1x.png), url(../images/background/tablet/footer-tablet-plate@1x.png), url(../images/background/tablet/tablet-bg-bottom@1x.png);
+    background-position: top 0 left 254px, top 0 left 0, bottom 298.32px right 0, bottom 0 right 0, bottom 63.01px left 0;
+    background-size: auto, contain, auto;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/tablet/hero-tablet-donut@2x.png), url(../images/background/tablet/tablet-bg-top@2x.png), url(../images/background/tablet/registration-tablet-confetti@2x.png), url(../images/background/tablet/footer-tablet-plate@2x.png) url(../images/background/tablet/tablet-bg-bottom@2x.png);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  body {
+    height: 3171px;
+    background-image: url(../images/background/desktop/hero-desktop-donut@1x.png), url(../images/background/desktop/desktop-bg-top@1x.png), url(../images/background/desktop/registration-desktop-confetti@1x.png), url(../images/background/desktop/footer-desktop-plate@1x.png), url(../images/background/desktop/desktop-bg-bottom@1x.png);
+    background-position: top 0 right 0, top 0 left 0, bottom 219.36px right 0, bottom 0 right 0, bottom -10px left 0;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/desktop/hero-desktop-donut@2x.png), url(../images/background/desktop/desktop-bg-top@2x.png), url(../images/background/desktop/registration-desktop-confetti@2x.png), url(../images/background/desktop/footer-desktop-plate@2x.png), url(../images/background/desktop/desktop-bg-bottom@2x.png);
+  }
+}
+
+.about-us {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 71px;
+  margin-right: 229px;
 }
 /*# sourceMappingURL=main.css.map */
