Добавляет стили в footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,25 +1,45 @@
-<footer>
-  <ul class="social-icons">
-    <li class="social-icons__item">
-      <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
-        <svg class="social-icons__svg social-icons__svg--twitter">
-          <use href="./images/symbol-defs.svg#icon-twitter"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="social-icons__item">
-      <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
-        <svg class="social-icons__svg social-icons__svg--instagram" width="15" height="15">
-          <use href="./images/symbol-defs.svg#icon-instagram"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="social-icons__item">
-      <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
-        <svg class="social-icons__svg social-icons__svg--facebook">
-          <use href="./images/symbol-defs.svg#icon-facebook"></use>
-        </svg>
-      </a>
-    </li>
-  </ul>
+<footer class="footer">
+  <div class="container">
+    <ul class="social-icons">
+      <li class="social-icons__item">
+        <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
+          <svg class="social-icons__svg social-icons__svg--twitter">
+            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-icons__item">
+        <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
+          <svg class="social-icons__svg social-icons__svg--instagram" width="15" height="15">
+            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-icons__item">
+        <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
+          <svg class="social-icons__svg social-icons__svg--facebook">
+            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <ul class="footer-contacts">
+      <li class="footer-contacts__item">
+        <a href="tel:(910)222-8855" class="footer-contacts__link">
+          <svg class="footer-contacts__icon" width="13" height="13">
+            <use href="./images/symbol-defs.svg#icon-phone"></use>
+          </svg>
+          (910)222-8855</a
+        >
+      </li>
+      <li class="footer-contacts__item footer-contacts__item--img">
+        <a href="" class="footer-contacts__link">
+          <svg class="footer-contacts__icon" width="11" height="14.44">
+            <use href="./images/symbol-defs.svg#icon-location"></use>
+          </svg>
+          New York</a
+        >
+      </li>
+    </ul>
+  </div>
 </footer>
