добавляет плавный скролл к якорю

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,8 +1,6 @@
 @media screen and (min-width: 320px), screen and (max-width: 319.98px) {
     .hero {
         text-align: center;
-
-        padding-bottom: 284px;
     }
 
     .hero__title {
@@ -13,7 +11,7 @@
         margin-bottom: 3px;
     }
 
-    .hero_text {
+    .hero__text {
         font-weight: 500;
         font-size: 16px;
         color: var(--text-color);
@@ -22,25 +20,17 @@
     }
 
     .hero__button {
-        font-family: var(--title-font);
-        font-size: 18px;
-        background: var(--form-bg);
-        border-radius: 25px;
-        border: transparent;
-        cursor: pointer;
-        color: #FFFFFF;
-
-        padding: 12px 47px 13px 46px;
+        display: inline-block;
 
         margin-bottom: 45px;
+
+        &:hover,
+        &:focus {
+            background-color: var(--hover-color);
+        }
     }
 
-    .hero__button:hover,
-    .hero__button:focus {
-        background-color: #674D40;
-    }
-
-    .hero_social-list {
+    .hero__social-list {
         display: flex;
         justify-content: center;
     }
@@ -51,11 +41,11 @@
 
     .hero_social-link {
         padding: 5px;
-    }
 
-    .hero_social-link:hover,
-    .hero_social-link:focus {
-        fill: #674D40;
+        &:hover,
+        &:focus {
+            fill: var(--hover-color);
+        }
     }
 }
 
@@ -65,7 +55,7 @@
         margin-left: 68px;
     }
 
-    .hero_text {
+    .hero__text {
         margin-bottom: 26px;
     }
 
@@ -73,7 +63,7 @@
         margin-bottom: 31px;
     }
 
-    .hero_social-list {
+    .hero__social-list {
         display: flex;
         justify-content: start;
     }
@@ -93,7 +83,7 @@
         margin-bottom: 15px;
     }
 
-    .hero_text {
+    .hero__text {
         font-size: 24px;
         color: var(--text-color);
 
@@ -101,26 +91,28 @@
     }
 
     .hero__button {
-        font-size: 24px;
-
         margin-bottom: 65px;
     }
 
-    .hero_social-link {
-        padding: 6px;
+    // .hero__social-link {
+    //     padding: 6px;
+    // }
+
+    .hero__social-item:not(:last-child) {
+        margin-right: 12px;
     }
 
-    .hero_social-icon-twitter {
+    .hero__social-icon-twitter {
         width: 24px;
         height: 19px;
     }
 
-    .hero_social-icon-instagram {
+    .hero__social-icon-instagram {
         width: 19px;
         height: 19px;
     }
 
-    .hero_social-icon-facebook {
+    .hero__social-icon-facebook {
         width: 10px;
         height: 19px;
     }
