Добавляет картинку в футер.

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,7 +32,7 @@
           (910)222-8855</a
         >
       </li>
-      <li class="footer-contacts__item footer-contacts__item--img">
+      <li class="footer-contacts__item">
         <a href="" class="footer-contacts__link">
           <svg class="footer-contacts__icon" width="11" height="14.44">
             <use href="./images/symbol-defs.svg#icon-location"></use>
@@ -41,5 +41,6 @@
         >
       </li>
     </ul>
+    <span class="img"></span>
   </div>
 </footer>
