--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,15 +9,20 @@ body {
 }
 
 .container {
-  // max-width: 320px;
+  max-width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 
-  @media (min-width: $tablet) {
-    width: $tablet;
+  @media (min-width: $mobile) {
+    max-width: $mobile;
   }
+
+  @media (min-width: $tablet) {
+    max-width: $tablet;
+  }
+
   @media (min-width: $pc) {
-    width: $pc;
+    max-width: $pc;
   }
 }
 
