--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -60,12 +60,12 @@ textarea {
   color: inherit;
 }
 
-.list {
-  list-style-type: none;
+.link:hover, .link:focus {
+  color: var(--hover-color);
 }
 
-.list:hover, .list:focus {
-  color: var(--hover-color);
+.list {
+  list-style-type: none;
 }
 
 :root {
@@ -88,51 +88,71 @@ textarea {
   --line-height: 1.25;
 }
 
-body {
-  height: 3526px;
-  padding-left: 5px;
-  padding-right: 5px;
-  background-color: #fffff9;
-  background-image: url(../images/background/mobile/hero-mobile-donut@1x.png), url(../images/background/mobile/mobile-bg-top@1x.png), url(../images/background/mobile/mobile-bg-bottom@1x.png), url(../images/background/mobile/footer-mobile-plate@1x.png);
-  background-position: top 0 left 0, top 0 left 0, bottom 216.4px left 0, bottom 0 right 0;
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: auto, contain, contain;
+.social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 34px;
 }
 
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  body {
-    background-image: url(../images/background/mobile/hero-mobile-donut@2x.png), url(../images/background/mobile/mobile-bg-top@2x.png), url(../images/background/mobile/mobile-bg-bottom@2x.png), url(../images/background/mobile/footer-mobile-plate@2x.png);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  body {
-    height: 2652px;
-    background-image: url(../images/background/tablet/hero-tablet-donut@1x.png), url(../images/background/tablet/tablet-bg-top@1x.png), url(../images/background/tablet/registration-tablet-confetti@1x.png), url(../images/background/tablet/footer-tablet-plate@1x.png), url(../images/background/tablet/tablet-bg-bottom@1x.png);
-    background-position: top 0 left 254px, top 0 left 0, bottom 298.32px right 0, bottom 0 right 0, bottom 63.01px left 0;
-    background-size: auto, contain, auto;
-    background-repeat: no-repeat, no-repeat, no-repeat;
-  }
-}
-
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  body {
-    background-image: url(../images/background/tablet/hero-tablet-donut@2x.png), url(../images/background/tablet/tablet-bg-top@2x.png), url(../images/background/tablet/registration-tablet-confetti@2x.png), url(../images/background/tablet/footer-tablet-plate@2x.png) url(../images/background/tablet/tablet-bg-bottom@2x.png);
-  }
+.social__item {
+  margin-right: 9px;
 }
 
 @media screen and (min-width: 1280px) {
-  body {
-    height: 3171px;
-    background-image: url(../images/background/desktop/hero-desktop-donut@1x.png), url(../images/background/desktop/desktop-bg-top@1x.png), url(../images/background/desktop/registration-desktop-confetti@1x.png), url(../images/background/desktop/footer-desktop-plate@1x.png), url(../images/background/desktop/desktop-bg-bottom@1x.png);
-    background-position: top 0 right 0, top 0 left 0, bottom 219.36px right 0, bottom 0 right 0, bottom -10px left 0;
-    background-repeat: no-repeat, no-repeat, no-repeat;
+  .social__item {
+    margin-right: 12px;
   }
 }
 
-@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
-  body {
-    background-image: url(../images/background/desktop/hero-desktop-donut@2x.png), url(../images/background/desktop/desktop-bg-top@2x.png), url(../images/background/desktop/registration-desktop-confetti@2x.png), url(../images/background/desktop/footer-desktop-plate@2x.png), url(../images/background/desktop/desktop-bg-bottom@2x.png);
+.social__item:last-child {
+  margin-right: 0;
+}
+
+.social__link:hover, .social__link:focus {
+  fill: var(--hover-color);
+}
+
+.social__icon {
+  height: 15px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon {
+    height: 19px;
+  }
+}
+
+.social__icon-twitter {
+  width: 19px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon-twitter {
+    width: 24px;
+  }
+}
+
+.social__icon-instagram {
+  width: 15px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon-instagram {
+    width: 19px;
+  }
+}
+
+.social__icon-facebook {
+  width: 8px;
+}
+
+@media screen and (min-width: 1280px) {
+  .social__icon-facebook {
+    width: 10px;
   }
 }
 
@@ -150,33 +170,6 @@ body {
   }
 }
 
-.contact {
-  padding-bottom: 47px;
-}
-
-@media screen and (min-width: 769px) {
-  .contact {
-    padding-bottom: 50px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .contact {
-    padding-bottom: 82px;
-  }
-}
-
-.contact__text {
-  line-height: 4.06;
-  text-align: center;
-}
-
-@media screen and (min-width: 1280px) {
-  .contact__text {
-    font-size: 18px;
-  }
-}
-
 .form__input {
   display: block;
   margin: auto;
@@ -186,6 +179,11 @@ body {
   border-bottom: 1px solid var(--form-bg);
   color: var(--form-bg);
   background-color: transparent;
+}
+
+.form__input:-webkit-autofill {
+  -webkit-transition-delay: 3600s;
+          transition-delay: 3600s;
 }
 
 .form__input:first-child {
@@ -214,6 +212,10 @@ body {
 
 .form__input:focus {
   outline: none;
+}
+
+.form__input:not(:placeholder-shown):required:invalid {
+  border-color: red;
 }
 
 @media screen and (min-width: 769px) {
@@ -247,6 +249,132 @@ body {
 @media screen and (min-width: 1280px) {
   .button {
     font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 320px), screen and (max-width: 319.98px) {
+  .hero {
+    text-align: center;
+  }
+  .hero__title {
+    font-family: var(--title-font);
+    font-size: 30px;
+    color: var(--text-color);
+    margin-bottom: 3px;
+  }
+  .hero__text {
+    font-weight: 500;
+    font-size: 16px;
+    color: var(--text-color);
+    margin-bottom: 37px;
+  }
+  .hero__button {
+    display: inline-block;
+    margin-bottom: 45px;
+  }
+  .hero__button:hover, .hero__button:focus {
+    background-color: var(--hover-color);
+  }
+  .hero__social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hero__social-item:not(:last-child) {
+    margin-right: 10px;
+  }
+  .hero_social-link {
+    padding: 5px;
+  }
+  .hero_social-link:hover, .hero_social-link:focus {
+    fill: var(--hover-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    text-align: start;
+    margin-left: 68px;
+  }
+  .hero__text {
+    margin-bottom: 26px;
+  }
+  .hero__button {
+    margin-bottom: 31px;
+  }
+  .hero__social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    text-align: start;
+    margin-left: 229px;
+  }
+  .hero__title {
+    font-family: var(--title-font);
+    font-size: 64px;
+    color: var(--text-color);
+    margin-bottom: 15px;
+  }
+  .hero__text {
+    font-size: 24px;
+    color: var(--text-color);
+    margin-bottom: 30px;
+  }
+  .hero__button {
+    margin-bottom: 65px;
+  }
+  .hero__social-item:not(:last-child) {
+    margin-right: 12px;
+  }
+  .hero__social-icon-twitter {
+    width: 24px;
+    height: 19px;
+  }
+  .hero__social-icon-instagram {
+    width: 19px;
+    height: 19px;
+  }
+  .hero__social-icon-facebook {
+    width: 10px;
+    height: 19px;
+  }
+}
+
+.contact {
+  padding-bottom: 47px;
+}
+
+@media screen and (min-width: 769px) {
+  .contact {
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .contact {
+    padding-bottom: 82px;
+  }
+}
+
+.contact__text {
+  line-height: 4.06;
+  text-align: center;
+}
+
+@media screen and (min-width: 1280px) {
+  .contact__text {
+    font-size: 18px;
   }
 }
 
@@ -308,67 +436,75 @@ body {
   margin-right: 3px;
 }
 
-.social-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 34px;
+.program__section {
+  margin-left: auto;
+  margin-right: auto;
+  width: 828px;
 }
 
-.social__item {
-  margin-right: 9px;
+.program__header {
+  color: var(--text-color);
+  font-family: var(--title-font);
+  font-size: 24px;
+  line-height: 2.71;
+  text-align: center;
 }
 
-@media screen and (min-width: 1280px) {
-  .social__item {
-    margin-right: 12px;
+@media screen and (min-width: 768px) {
+  .program__header {
+    text-align: left;
   }
 }
 
-.social__item:last-child {
-  margin-right: 0;
-}
-
-.social__icon {
-  height: 15px;
-}
-
 @media screen and (min-width: 1280px) {
-  .social__icon {
-    height: 19px;
+  .program__header {
+    font-size: 36px;
+    line-height: 1.81;
   }
 }
 
-.social__icon-twitter {
-  width: 19px;
+.program__text {
+  line-height: 1.25;
+  margin-bottom: 10px;
 }
 
 @media screen and (min-width: 1280px) {
-  .social__icon-twitter {
-    width: 24px;
+  .program__text {
+    font-size: 18px;
+    line-height: 1.22;
+    margin-bottom: 21px;
   }
 }
 
-.social__icon-instagram {
-  width: 15px;
+.program-list__text {
+  line-height: 1.25;
 }
 
 @media screen and (min-width: 1280px) {
-  .social__icon-instagram {
-    width: 19px;
+  .program-list__text {
+    font-size: 18px;
+    line-height: 1.22;
   }
 }
 
-.social__icon-facebook {
-  width: 8px;
+.program-list__text::before {
+  content: '\3E';
+  margin-right: 5px;
+}
+
+.program-list__item:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 @media screen and (min-width: 1280px) {
-  .social__icon-facebook {
-    width: 10px;
+  .program-list__item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .program-list__item:last-child {
+    margin-bottom: 21px;
   }
 }
 /*# sourceMappingURL=main.css.map */
