--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,9 +8,10 @@
 @import './variables';
 @import './social-list';
 @import './body';
-@import './title'; 
+@import './title';
 @import './form';
 @import './button';
 @import './hero';
 @import './contact';
 @import './footer';
+@import './program';
