без ридмор и стилей

--- a/src/sass/_about-us.scss
+++ b/src/sass/_about-us.scss
@@ -16,43 +16,43 @@
 }
 
 @media screen and (min-width: 1280px) {
-    .about-us {
-      margin-left: 71px;
-      margin-right: 229px;
-      max-width: 980px;
-      min-height: 546px;
-    }
+  .about-us {
+    margin-left: 71px;
+    margin-right: 229px;
+    max-width: 980px;
+    min-height: 546px;
   }
+}
 
-  @media screen and (min-width: 768px) and (max-width: 1280px) {
-    .about-us {
-        max-width: 690px;
-        max-height: 390px;
-        margin-left: 12px;
-        margin-right: 67px;
-        position: relative;
-    }
-  } 
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .about-us {
+    max-width: 690px;
+    max-height: 390px;
+    margin-left: 12px;
+    margin-right: 67px;
+    position: relative;
+  }
+}
 
 .about-us__text-container {
   flex-basis: 50%;
 }
 
 @media screen and (min-width: 1280px) {
-    .about-us__text-container {
-        position: absolute;
-        left: 50%;
-        top: 13%;
-        max-width: 392px;
-    }
-  } 
+  .about-us__text-container {
+    position: absolute;
+    left: 55%;
+    top: 13%;
+    max-width: 392px;
+  }
+}
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
-    .about-us__text-container {
-        position: absolute;
-        left: 50%;
-    }
-  } 
+  .about-us__text-container {
+    position: absolute;
+    left: 60%;
+  }
+}
 
 .about-us__text {
   font-style: normal;
@@ -63,8 +63,6 @@
   text-align: justify;
 }
 
-
-
 @media screen and (min-width: 320px) and (max-width: 1280px) {
   .about-us__text {
     font-size: 16px;
@@ -72,11 +70,44 @@
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: 1280px) {
+  .about-us__main-text {
+    position: relative;
+  }
+
+  .about-us__hidden-text {
+    position: absolute;
+    top: 90%;
+    display: none;
+  }
+}
+
 .section-title {
   margin-bottom: 10px;
 }
 
+@media screen and (min-width: 1279px) {
+  .read-more {
+    display: none;
+  }
+}
 
+.button {
+  color: var();
+  transition: var();
+}
+
+.button:focus,
+.button:hover {
+  color: var();
+}
+
+// .button:hover .about-us__hidden-text,
+// .button:focus .about-us__hidden-text {
+//     display: block;
+// }
+
+// #more {display: none;}
 
 // @media screen and (min-width: 768px) {
 //     .about-us {
