--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -117,3 +117,8 @@
     }
   }
 }
+
+.contact__field:invalid {
+  background-color: rgba(255, 0, 0, 0.5);
+  border-bottom: 1px solid rgb (255, 0, 0);
+}
