оформляет хедер и мобильное меню

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,7 +5,9 @@
    --text-color: #2E2520; /*цвет текста базовый, он же цвет иконок*/
    --text-accent-color: #000000; /*цвет текста в пончиках секции программа*/
    --form-bg: #AB816C; /*цвет полей форм*/
-   --hover-color: #bb785669; /*предлагаю этот цвет взять для эффектов ховер-фокус*/
+   --hover-color: #876655; 
    --title-font: "Caveat Brush", cursive; /*шрифт для заголовков*/
    --line-height: 1.25;
+   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
