--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,12 +9,12 @@ body {
 }
 
 .container {
-  max-width: 320px;
+  max-width: $mobile;
   padding: 0 15px;
   margin: 0 auto;
 
   @media (min-width: $tablet) {
-    width: $tablet;
+    max-width: $tablet;
   }
   @media (min-width: $pc) {
     width: $pc;
