--- a/src/sass/_about-us.scss
+++ b/src/sass/_about-us.scss
@@ -59,7 +59,6 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  color: orangered;
   text-align: justify;
 }
 
@@ -70,37 +69,51 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 1280px) {
-  .about-us__main-text {
-    position: relative;
+@media screen and (min-width: 320px) and (max-width: 1279px) {
+    #more {
+      display: none;
+    }
   }
 
-  .about-us__hidden-text {
-    position: absolute;
-    top: 90%;
-    display: none;
-  }
+button {
+    color: var;
+    transition: var();
 }
+
+  button:focus,
+  button:hover {
+      color: var();
+  }
+
+  @media screen and (min-width: 1279px) {
+    button {
+      display: none;
+    }
+  }
+
+// @media screen and (min-width: 320px) and (max-width: 1280px) {
+//   .about-us__main-text {
+//     position: relative;
+//   }
+
+//   .about-us__hidden-text {
+//     position: absolute;
+//     top: 90%;
+//     display: none;
+//   }
+// }
 
 .section-title {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 1279px) {
-  .read-more {
-    display: none;
-  }
-}
+// @media screen and (min-width: 1279px) {
+//   .read-more {
+//     display: none;
+//   }
+// }
 
-.button {
-  color: var();
-  transition: var();
-}
 
-.button:focus,
-.button:hover {
-  color: var();
-}
 
 // .button:hover .about-us__hidden-text,
 // .button:focus .about-us__hidden-text {
