--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section id="about-us" class="about-us">
+<section id="section" class="about-us">
     <div class="about-us__pic-container">
         <picture>
             <source srcset="./images/about-us/desktop/about-us-desktop@1x.png 1x, ./images/about-us/desktop/about-us-desktop@2x.png 2x" media="(min-width: 1280px)" />
@@ -9,15 +9,11 @@
     </div>
     <div class="about-us__text-container">
         <h3 class="section-title">About us</h3>
-        <div class="about-us__main-text">
-            <p class="about-us__text">Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated donuts which will save the world! <br>  <br> 
-            Eva has been baking since she was six years old and over the last 49 years, she
-            has created hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have received multiple awards & recognition for excellence.</p>
-        </div> <br> 
-        <div class="about-us__hidden-text">
-            <p class="about-us__text">We are going to teach you how to cook with passion and sparkles in your eyes! We love what we do and believe you will enjoy our cooking atmosphere!</p>
-        </div>
-        <button class="button read-more">Read more</button>
+        <p class="about-us__text">Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated donuts which will save the world! <br> <br>
+        Eva has been baking since she was six years old and over the last 49 years, she
+        has created hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have received multiple awards & recognition for excellence <span id="dot">.</span> <br> <br>
+        <span id="more"> We are going to teach you how to cook with passion and sparkles in your eyes! We love what we do and believe you will enjoy our cooking atmosphere!</span> </p> 
+        <button id="btn" class="button" onclick="readmore()">Read more</button>
     </div>
 </section>
-<!-- <script src="./read-more.js"></script> -->
+<script src="./read-more.js"></script>
