header for desktop

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -13,9 +13,7 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 
-
-  background-color: aqua;
-
+  // background-color: bisque;
 
   @media (min-width: $mobile) {
     max-width: $mobile;
@@ -24,10 +22,12 @@ body {
 
   @media (min-width: $tablet) {
     max-width: $tablet;
+    padding: 0 66px 0 67px;
   }
 
   @media (min-width: $pc) {
     max-width: $pc;
+    padding: 0 228px;
   }
 }
 
