--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,35 +18,34 @@
 <body>
     
     <header>
-        <nav class="container page-nav__container">
+        <nav class="container page-nav__section">
             <div class="page-nav--position">
-                <a href="./index.html" class="logo logo--position" lang="en">
-                    <svg class="logo__icon">
-                        <use href="./images/symbol-defs.svg#icon-logo"></use>
+                <div class="page-nav__wrap">
+                    <a href="./index.html" class="logo logo--position" lang="en">
+                        <svg class="logo__icon">
+                            <use href="./images/symbol-defs.svg#icon-logo"></use>
+                        </svg>
+                    </a> 
+                
+                    <ul class="page-nav">
+                        <li class="page-nav__item"><a href="" class="page-nav__link">About us</a></li>
+                        <li class="page-nav__item"><a href="" class="page-nav__link">Program</a></li>
+                        <li class="page-nav__item"><a href="" class="page-nav__link">Reviews</a></li>
+                        <li class="page-nav__item"><a href="" class="page-nav__link">Contacts</a></li>
+                    </ul>
+                </div>
+
+                <button type="button" 
+                    class="mobile-menu__button"
+                    aria-expanded="false"
+                    aria-controls="mobile-menu" 
+                    data-menu-button>
+                    <svg width="30px" height="16px"
+                        aria-label="Переключатель мобильного меню">
+                            <use class="mobile-menu_icon-menu" href="./images/symbol-defs.svg#icon-burger-menu"></use>
+                            <use class="mobile-menu_icon-close" href="./images/symbol-defs.svg#icon-close"></use>
                     </svg>
-                </a> 
-            
-
-            <!-- <div class="page-nav__wrap">
-                <ul class="page-nav">
-                    <li class="page-nav__item"><a href="" class="page-nav__link">About us</a></li>
-                    <li class="page-nav__item"><a href="" class="page-nav__link">Program</a></li>
-                    <li class="page-nav__item"><a href="" class="page-nav__link">Reviews</a></li>
-                    <li class="page-nav__item"><a href="" class="page-nav__link">Contacts</a></li>
-                </ul>
-            </div> -->
-
-            <button type="button" 
-                class="mobile-menu__button"
-                aria-expanded="false"
-                aria-controls="mobile-menu" 
-                data-menu-button>
-                <svg width="30px" height="16px"
-                    aria-label="Переключатель мобильного меню">
-                        <use class="mobile-menu_icon-menu" href="./images/symbol-defs.svg#icon-burger-menu"></use>
-                        <use class="mobile-menu_icon-close" href="./images/symbol-defs.svg#icon-close"></use>
-                </svg>
-            </button>
+                </button>
             </div>
 
             <div class="mobile-menu" id="mobile-menu" data-menu>
@@ -59,10 +58,10 @@
 
                 <div class="page-nav__wrap--mobile">
                     <ul class="page-nav--mobile">
-                        <li class="page-nav__item"><a href="" class="page-nav__link">About us</a></li>
-                        <li class="page-nav__item"><a href="" class="page-nav__link">Program</a></li>
-                        <li class="page-nav__item"><a href="" class="page-nav__link">Reviews</a></li>
-                        <li class="page-nav__item"><a href="" class="page-nav__link">Contacts</a></li>
+                        <li class="page-nav__item--mobile"><a href="" class="page-nav__link--mobile">About us</a></li>
+                        <li class="page-nav__item--mobile"><a href="" class="page-nav__link--mobile">Program</a></li>
+                        <li class="page-nav__item--mobile"><a href="" class="page-nav__link--mobile">Reviews</a></li>
+                        <li class="page-nav__item--mobile"><a href="" class="page-nav__link--mobile">Contacts</a></li>
                     </ul>
                 </div>               
                 
