--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,9 +1,12 @@
-
-.page-nav__container {
+.page-nav__section {
     padding-top: 7px;
 
     @media screen and (min-width: $tablet) {
         padding-top: 27px;
+    }
+
+    @media screen and (min-width: $pc) {
+        padding-top: 31px;
     }
 }
 
@@ -34,6 +37,10 @@
         top: 50%;
         transform: translateY(-50%);
     }
+
+    @media screen and (min-width: $pc) {
+        display: none;
+    }
 }
 
 
@@ -50,142 +57,38 @@
 }
 
 
-// @media screen and (max-width:767.98px) {
-//     
 
-//     .main-nav {
-//         display: flex;
-//         padding-top: 16px;
-//         padding-bottom: 16px;
-//         align-items: center;
-//         justify-content: space-between;
-//     }
-// }
+.page-nav__wrap {
+    display: flex; 
+    align-items: center;
 
+}
 
-// @media screen and (min-width:768px) {
-//     .main-nav {
-//         display: flex;
-//         align-items: center;
-//         min-height: 80px;
-//     }
+.page-nav {
+    display: flex;
 
-//     .page-nav {
-//         display: flex;
-//     }
+    @media screen and (max-width: 1279.98px) {
+        display: none;
+    }
+}
 
-//     .page-nav__item + .page-nav__item {
-//         margin-left: 50px;
-//     }
+.page-nav__item {
+    margin-left: 20px;
 
-//     .page-nav__link {
-//         padding-top: 32px;
-//         padding-bottom: 32px;
-          
-//         font-weight: 500;
-//         font-size: 14px;
-//         line-height: 1.14;
-//         letter-spacing: 0.02em;
-//         text-decoration: none; 
-            
-//         color: var(--title-text-color);
-//         transition: color 250ms var(--animation-cubic);
-    
-//         &:hover,
-//         &:focus {
-//             color: var(--accent-color);
-//         } 
-//     }
+    &:first-child {
+        margin-left: 38px;
+    }
+}
 
-//     .page-nav__current {
-//         position: relative;
-//         color: var(--accent-color);
-    
-//         &::after {
-//             content: '';
-//             position: absolute;
-//             left: 0;
-//             bottom: 0;
-            
-//             display: block;
-//             width: 100%;
-//             height: 4px;
-//             border-radius: 2px;
-            
-//             background-color: var(--accent-color);
-//         }
-//     }
+.page-nav__link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.22;
 
-//     .contacts__link {
-//         font-weight: 500;
-//         font-size: 14px;
-//         line-height: 1.14;
-//         letter-spacing: 0.02em;
-//         text-decoration: none;
+    color: $text;
 
-//         color: var(--primary-text-color);
-//         transition: color 250ms var(--animation-cubic);
-
-//         &:hover,
-//         &:focus {
-//             color: var(--accent-color);
-//         }
-
-//         &:hover .contacts__icon,
-//         &:focus .contacts__icon {
-//             fill: var(--accent-color);
-//         }
-//     }
-    
-//     .contacts__icon {
-//         margin-right: 10px;
-            
-//         fill: currentColor;
-//         transition: fill 250ms var(--animation-cubic);
-//     }
-// }
-
-// @media screen and (min-width:768px) and (max-width: 1199.98px) {
-//     .main-nav {
-//         justify-content: space-between;
-//     }
-
-//     .contacts__item {
-//         margin-bottom: 10px;
-          
-//           &:last-child {
-//             margin-bottom: 0;
-//           }
-//     }
-
-//     .contacts__link {
-//         padding-top: 21px;
-//         padding-bottom: 21px; 
-
-//         font-size: 12px;
-//         line-height: 1.17;
-//     }
-
-//     .contacts__icon {
-//         margin-right: 8px;
-//     }
-// }
-
-// @media screen and (min-width:1200px) {
-//     .contacts__wrap {
-//         margin-left: auto;
-//     }
-
-//     .contacts {
-//         display: flex;
-//     }
-
-//     .contacts__item + .contacts__item {
-//         margin-left: 30px;
-//     }
-
-//     .contacts__link {
-//         display: flex;
-//         align-items: center;
-//     }
-// }
+    &:hover,
+    &:focus {
+        color: $hover;
+    }
+}
