--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,12 +1,17 @@
 .logo__icon {
     width: 96px;
     height: 43px;
+
+    @media screen and (min-width: $pc) {
+        width: 158px;
+        height: 71px;
+    }
 }
 
 @media screen and (max-width: 767.98px) {
     .logo--position {
-        display: block;
-        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
