--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -20,7 +20,7 @@
     }
 }
 
-.page-nav__link {
+.page-nav__link--mobile {
     font-weight: 500;
     font-size: 24px;
     line-height: 1.2;
@@ -33,7 +33,7 @@
     }
 }
 
-.page-nav__item {
+.page-nav__item--mobile {
     margin-bottom: 45px;
 
     &:last-child {
@@ -49,74 +49,3 @@
     }
 }
 
-
-
-
-
-// @media screen and (max-width: 767.98px) {
-//     
-
-
-//     .contacts__wrap--mobile {
-//         position: absolute;
-//         bottom: 48px;
-//     }
-
-//     .contacts--mobile {
-//         margin-bottom: 64px;
-//     }
-
-//     .contacts__item--tel {
-//         margin-bottom: 32px;
-//     }
-
-//     .contacts__link--tel {
-//         font-weight: 500;
-//         font-size: 30px;
-//         line-height: 1.18;
-//         letter-spacing: 0.02em;
-//         text-decoration: none;
-
-//         color: var(--accent-color);
-//     }
-
-//     .contacts__link--mail {
-//         font-weight: 500;
-//         font-size: 24px;
-//         line-height: 1.17;
-//         letter-spacing: 0.02em;
-//         text-decoration: none;
-
-//         color: var(--primary-text-color);
-//     }
-
-//     .social-network {
-//         display: flex;
-//         flex-wrap: wrap;
-//     }
-
-//     .social-network__link {
-//         margin-right: 20px;
-//         font-weight: 500;
-//         font-size: 18px;
-//         line-height: 1.22;    
-//         letter-spacing: 0.02em;
-//         text-decoration: none;
-        
-//         color: var(--accent-color);
-//     }
-// }
-
-// @media screen and (max-width: 767.98px) {
-//     .page-nav__wrap,
-//     .contacts__wrap {
-//         display: none;
-//     }
-// }
-
-// @media screen and (min-width: 768px) {
-//     .mobile-menu__button,
-//     .mobile-menu {
-//         display: none;
-//     }
-// }
