--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -4,8 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    // max-width: $mobile;
-    height: 100vh;
+    height: 100%;
     z-index: 120;
 
     padding: 25px;
