--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -97,24 +97,14 @@
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url('../images/wheat@2x.png');
   }
-}
 
-@media screen and (min-width: $tablet) and (max-width: $pc) {
-  .img {
-    background-image: url('../images/wheat.png');
-
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../images/wheat@2x.png');
-    }
+  @media screen and (min-width: $tablet) and (max-width: $pc) {
+    width: 207px;
+    height: 182px;
   }
-}
 
-@media screen and (min-width: $pc) {
-  .img {
-    background-image: url('../images/wheat.png');
-
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../images/wheat@2x.png');
-    }
+  @media screen and (min-width: $pc) {
+    width: 362px;
+    height: 318px;
   }
 }
