--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,30 +1,52 @@
-.hero {
-  position: relative;
-  padding: 0;
-  width: $mobile;
-  height: 460.51px;
-  background: url(/images/bg-1.png);
-  margin: 0 auto;
-  padding: 0;
-  height: 460.51px;
-  // background: url(/images/bg-1-mobile.png);
-  // background-size: contain;
-  // background-repeat: no-repeat;
-  // @media screen and (min-width: $tablet) {
-  //   width: $tablet;
-  //   display: flex;
-  //   background: url(/images/bg-1.png);
-  // }
+@media screen and (min-width: $mobile) and (max-width: 767px) {
+  .hero {
+    padding: 0;
+    width: 100%;
+    height: 460.51px;
+    background: url(/images/bg-1-mobile.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: $tablet) and (max-width: 1279px) {
+  .hero {
+    width: 100%;
+    height: 796px;
+    background: url(/images/bg-1.png);
+  }
+}
+@media screen and (min-width: $pc) {
+  .hero {
+    width: 100%;
+    height: 796px;
+    background: url(/images/bg-1.png);
+  }
 }
 
 .image__donuts {
-  position: absolute;
-  top: -51px;
-  left: -12px;
+  display: none;
+  @media screen and (min-width: $mobile) and (max-width: 767px) {
+    display: block;
+    width: 130px;
+    height: 165px;
+    position: absolute;
+    top: -51px;
+    left: -12px;
+  }
   @media screen and (min-width: $tablet) {
+    display: block;
+    width: 378px;
     position: absolute;
     top: -35px;
     left: 254px;
+  }
+  @media screen and (min-width: $pc) {
+    display: block;
+    width: 793px;
+    position: absolute;
+    top: -171px;
+    left: 47%;
   }
 }
 .hero__title {
@@ -40,10 +62,6 @@
   margin: 0%;
   letter-spacing: inherit;
 
-  background-image: url(/images/pic-donuts.png);
-  background-position: inherit;
-  background-repeat: no-repeat;
-
   color: $text;
   margin: 0;
   letter-spacing: inherit;
@@ -51,12 +69,15 @@
   position: relative;
   z-index: 20;
 
-  
   @media screen and (min-width: $tablet) {
-    position: absolute;
-    left: 68px;
-    top: 80px;
-    text-align: left;
+    display: flex;
+    text-align: inherit;
+    margin: 10px 0 0 0;
+    padding: 0px;
+  }
+  @media screen and (min-width: $pc) {
+    font-size: 64px;
+    margin-top: 57px;
   }
 }
 
@@ -78,16 +99,16 @@
 
   color: $text;
   @media screen and (min-width: $tablet) {
-    position: absolute;
-    left: 68px;
-    top: 159px;
-    padding: 0px;
+    display: flex;
+  }
+  @media screen and (min-width: $pc) {
+    font-size: 24px;
+    margin-top: 15px;
   }
 }
 
 .button__register {
   display: flex;
-
   text-align: center;
   align-items: center;
   font-family: Caveat Brush;
@@ -107,9 +128,7 @@
   height: 40px;
   left: 88px;
   top: 219px;
-
   background-color: $button;
-
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -117,18 +136,14 @@
     color: $milk;
     background-color: $hover;
   }
-}
-
-.socials {
-  margin-top: 37px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   @media screen and (min-width: $tablet) {
-    position: absolute;
-    left: 68px;
-    top: 183px;
-    margin-top: 26px;
+    display: flex;
+    margin: 26px 0 0 0;
+  }
+  @media screen and (min-width: $pc) {
+    width: 158px;
+    font-size: 24px;
+    margin-top: 30px;
   }
 }
 
@@ -139,10 +154,12 @@
   justify-content: center;
   height: 19px;
   @media screen and (min-width: $tablet) {
-    position: absolute;
-    left: 95px;
-    top: 250px;
-    margin-top: 31px;
+    display: flex;
+    margin: 31px 0 0 0;
+    justify-content: flex-start;
+  }
+  @media screen and (min-width: $pc) {
+    margin-top: 57px;
   }
 }
 .social__item {
@@ -155,8 +172,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 0;
-  width: 19px;
-  height: 19px;
+
   border-radius: 50%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -165,5 +181,32 @@
   &:focus {
     background-color: $hover;
     fill: $white;
+  }
+}
+
+.icon-twitter {
+  width: 19px;
+  height: 15px;
+  @media screen and (min-width: $pc) {
+    width: 24px;
+    height: 19px;
+    margin-right: 12px;
+  }
+}
+.icon-instagram {
+  width: 15px;
+  height: 15px;
+  @media screen and (min-width: $pc) {
+    width: 19px;
+    height: 19px;
+    margin-right: 12px;
+  }
+}
+.icon-facebook {
+  width: 9px;
+  height: 15px;
+  @media screen and (min-width: $pc) {
+    width: 11px;
+    height: 19px;
   }
 }
