Добавляет стили для Desktop в секцию Program

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -39,7 +39,7 @@
                 </picture>
                 <span class="program-details__title">Type of the event</span>
                 <p class="program-details__text">Cooking classes</p>
-                <svg class="icon" width="19.42" height="18.01">
+                <svg class="icon-chef-hat" width="19.42" height="18.01">
                    <use href="./images/symbol-defs.svg#icon-chef-hat"></use>
                </svg>
            
@@ -52,7 +52,7 @@
                 </picture>
                 <span class="program-details__title">Number of guests</span>
                 <p class="program-details__text">1 to 20</p>
-                <svg class="icon" width="20.32" height="18.26">
+                <svg class="icon-people" width="20.32" height="18.26">
                     <use href="./images/symbol-defs.svg#icon-people"></use>
                 </svg>
            </li>
@@ -63,7 +63,7 @@
                 </picture>
                 <span class="program-details__title">Time of the event</span>
                 <p class="program-details__text">18:30 (2.5 hours)</p>
-                <svg class="icon" width="19.72" height="19.72">
+                <svg class="icon-clock" width="19.72" height="19.72">
                     <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
             </li>
@@ -74,7 +74,7 @@
                 </picture>
                 <span class="program-details__title">The host speaks</span>
                 <p class="program-details__text">English, French</p>
-                <svg class="icon" width="24.83" height="16.8">
+                <svg class="icon-chat" width="24.83" height="16.8">
                     <use href="./images/symbol-defs.svg#icon-chat"></use>
                 </svg>
             </li> 
