--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,3 +7,15 @@ $hover: #876655;
 $mobile: 320px;
 $tablet: 768px;
 $pc: 1280px;
+
+// Aleksandr added this colors for Registration and Reviews.
+
+root {
+    --registration-input-color: rgba(171, 129, 108, 0.5);
+    --registration-shadow: -4px -4px 4px rgba(171, 129, 108, 0.15),
+      4px 4px 4px rgba(171, 129, 108, 0.15);
+    --form-bg-color: #fffff9;
+    --review-star-color: #ab816c;
+    --mobile-menu-hover: #876655;
+
+}
