--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,12 +1,17 @@
-<section>
+<section class="about-us">
   <span class="about-us__img"></span>
-  <h2 class="about-us__title">About us</h2>
-  <p class="about-us__text">
-    Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
-    donuts which will save the world! Eva has been baking since she was six years old and over the
-    last 49 years, she has created hundreds of cakes for weddings and has baked for many
-    celebrities. Eva and our shop have received multiple awards & recognition for excellence. We are
-    going to teach you how to cook with passion and sparkles in your eyes! We love what we do and
-    believe you will enjoy our cooking atmosphere!
-  </p>
+  <div class="about-us__wrapper">
+    <h2 class="about-us__title">About us</h2>
+    <p class="about-us__text">
+      Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
+      donuts which will save the world!
+      <br />
+      Eva has been baking since she was six years old and over the last 49 years, she has created
+      hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have
+      received multiple awards & recognition for excellence.
+      <br />
+      We are going to teach you how to cook with passion and sparkles in your eyes! We love what we
+      do and believe you will enjoy our cooking atmosphere!
+    </p>
+  </div>
 </section>
