--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -89,6 +89,22 @@ line-height:1.25;
             }
 } 
 
+.program__item::before{
+    content: "";
+    width: 5px;
+    height: 5px;
+    background-color: chartreuse;
+    display: block;
+    position: absolute;
+    // background-image: url(../images/donut-1.png);
+}
+// .program__item::before{
+// content: "";
+// width:5px;
+// height:5px;
+// display: block;
+// background-color: blueviolet;
+// }
 
 .container-program{
     @media screen and (min-width:$tablet) {
@@ -119,6 +135,8 @@ line-height:1.25;
     flex-basis: calc((100% - 38px * 2) / 2) 
     }
 }
+
+
 @media screen and (min-width:$tablet){
     .container-program__item:nth-child(2){
         padding-top: 33.92px;
