--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -89,15 +89,22 @@ line-height:1.25;
             }
 } 
 
-.program__item::before{
-    content: "";
-    width: 5px;
-    height: 5px;
-    background-color: chartreuse;
-    display: block;
-    position: absolute;
-    // background-image: url(../images/donut-1.png);
-}
+// .program__item{
+    
+// &::before{
+//     content: "";
+//     width: 5px;
+//     height: 5px;
+//     background-color: #AB816C;
+//     display: block;
+//     position: absolute;
+  
+//     border-radius: 50%;
+  
+// }
+// }
+
+// .program__item-text{padding-left: 15px;}
 // .program__item::before{
 // content: "";
 // width:5px;
