--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -2,16 +2,20 @@
   <span class="about-us__img"></span>
   <div class="about-us__wrapper">
     <h2 class="about-us__title">About us</h2>
-    <p class="about-us__text">
+    <div class="about-us__text">
+      <p>
       Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
       donuts which will save the world!
-      <br />
+      </p>
+      <p>
       Eva has been baking since she was six years old and over the last 49 years, she has created
       hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have
       received multiple awards & recognition for excellence.
-      <br />
+        <p>
+      </p>
       We are going to teach you how to cook with passion and sparkles in your eyes! We love what we
       do and believe you will enjoy our cooking atmosphere!
-    </p>
+      </p>
+    </div>
   </div>
 </section>
