Adjusted hero photo

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,3 +1,9 @@
+.container-hero {
+  @media screen and (min-width: $tablet) {
+    position: relative;
+  }
+}
+
 @media screen and (min-width: $mobile) and (max-width: 767px) {
   .hero {
     padding: 0;
@@ -22,8 +28,7 @@
 }
 
 .image__donuts {
-  display: none;
-  @media screen and (min-width: $mobile) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     display: block;
     width: 130px;
     height: 165px;
@@ -31,21 +36,29 @@
     top: -51px;
     left: -12px;
   }
-  @media screen and (min-width: $tablet) {
-    display: block;
-    width: 378px;
-    position: absolute;
-    top: -35px;
-    left: 254px;
-  }
-  @media screen and (min-width: $pc) {
-    display: block;
-    width: 793px;
-    position: absolute;
-    top: -171px;
-    left: 47%;
+  @media screen and (min-width: 767px) {
+    display: none;
   }
 }
+
+.image__donuts-tablet {
+  display: none;
+  position: absolute;
+  left: 253px;
+  top: -120px;
+  width: 378px;
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
+  @media screen and (min-width: $pc) {
+    position: absolute;
+    width: 793px;
+    height: 831px;
+    left: 561px;
+    top: -340px;
+  }
+}
+
 .hero__title {
   font-family: Caveat Brush;
   font-style: normal;
@@ -55,7 +68,7 @@
   line-height: 1.26;
 
   text-align: center;
-  padding-top: 83px;
+  padding-top: 35px;
   margin: 0%;
   letter-spacing: inherit;
 
