--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,13 @@
 <section class="hero">
- <div class="container">
+ <div class="container container-hero">
 
    <div class="image__donuts">
-    <img srcset="./images/pic-donuts.png 1x, ./images/pic-donuts@2x.png 2x" src="./images/pic-donuts-mobile.png"  alt="donuts">
+    <img srcset="./images/pic-donuts-mobile.png 1x, ./images/pic-donuts-mobile@2x.png 2x" src="./images/pic-donuts-mobile.png"  alt="donuts">
+    </div>
+
+    <div class="image__donuts-tablet">
+        <img srcset="./images/pic-donuts.png 1x, ./images/pic-donuts@2x.png 2x"
+            src="./images/pic-donuts.png" alt="donuts">
     </div>
     
     <h1 class="hero__title">Donut Masterclass </br> with the Donut King</h1>
