--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -276,21 +276,21 @@
   }
 
   @media screen and (min-width: 768px) {
-    background-image: url(./../images/registration/tablet_donut4-2.png);
+    background-image: url('./../images/registration/tablet_donut4-2.png');
     background-repeat: no-repeat;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(./../images/registration/tablet_donut4-2@2x.png);
+      background-image: url('./../images/registration/tablet_donut4-2@2x.png');
       background-repeat: no-repeat;
     }
   }
 
   @media screen and (min-width: 1280px) {
-    background-image: url(./../images/registration/desktop_donut4-2.png);
+    background-image: url('./../images/registration/desktop_donut4-2.png');
     background-repeat: no-repeat;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(./../images/registration/desktop_donut4-2@2x.png);
+      background-image: url('./../images/registration/desktop_donut4-2@2x.png');
       background-repeat: no-repeat;
     }
   }
@@ -319,21 +319,21 @@
   }
 
   @media screen and (min-width: 768px) {
-    background-image: url('../../images/registration/tablet_kisspng-party-confetti-birthday-idea.png');
+    background-image: url('./../images/registration/tablet_kisspng-party-confetti-birthday-idea.png');
     background-repeat: no-repeat;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../../images/registration/tablet_kisspng-party-confetti-birthday-idea@2x.png');
+      background-image: url('./../images/registration/tablet_kisspng-party-confetti-birthday-idea@2x.png');
       background-repeat: no-repeat;
     }
   }
 
   @media screen and (min-width: 1280px) {
-    background-image: url('../../images/registration/desktop_kisspng-party-confetti-birthday-idea.png');
+    background-image: url('./../images/registration/desktop_kisspng-party-confetti-birthday-idea.png');
     background-repeat: no-repeat;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url('../../images/registration/desktop_kisspng-party-confetti-birthday-idea@2x.png');
+      background-image: url('./../images/registration/desktop_kisspng-party-confetti-birthday-idea@2x.png');
       background-repeat: no-repeat;
     }
   }
