--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -91,7 +91,7 @@
 .slick-prev{
     left: -6px;
     margin: -15px 0 0 0 ;
-    background: url('./../images/background_images/slick-prev.svg') 0 0 / 100% no-repeat ;
+    background: url('./../images/symbol-defs.svg#slick-prev') 0 0 / 100% no-repeat ;
     height: 30px;
     width: 30px;
     border: none;
@@ -100,7 +100,7 @@
 .slick-next{
     right: -6px;
     margin: -15px 0 0 0 ;
-    background: url('./../images/background_images/slick-next.svg') 0 0 / 100% no-repeat ;
+    background: url('./../images/symbol-defs.svg#slick-next') 0 0 / 100% no-repeat ;
     height: 30px;
     width: 30px;
     border: none;
