Alex's Photos and bg

--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -43,13 +43,12 @@ color: #AB816C;
 
 .program__title{
 font-family: Caveat Brush;
-font-style: normal;
-font-weight: normal;
 font-size: 24px;
 line-height: 2.7;
 color: #2E2520;
 margin: 0px;
 padding: 0px;
+text-align: center;
 @media screen and (min-width:$pc){
  font-size: 36px;
  line-height: 1.8;
