--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,3 +1,10 @@
+.header {
+    background-image: url(/images/bg1-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 100%;
+}
+
 .page-nav__section {
     padding-top: 7px;
 
