--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -8,11 +8,6 @@
   .hero {
     padding: 0;
     width: 100%;
-    height: 460.51px;
-    background-image: url(/images/bg-1.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0 auto;
   }
 }
 @media screen and (min-width: $tablet) and (max-width: 1279px) {
@@ -165,6 +160,7 @@
   width: 100%;
   justify-content: center;
   height: 19px;
+  margin-bottom: 10px;
   @media screen and (min-width: $tablet) {
     display: flex;
     margin: 31px 0 0 0;
