--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,4 @@
+<img src="./images/bg1-mobile.svg" alt="bg" class="bg-1">
         <nav class="container page-nav__section">
             <div class="page-nav--position">
                 <div class="page-nav__wrap">
