--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -41,7 +41,7 @@
             </li>
         </ul>
 
-        <img src="./images/pic.png" alt="pic">
+        <img src="./images/pic.png" alt="pic" class="pic">
 
     </div>
   
