--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -46,3 +46,13 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+
+.bg-1 {
+  position: absolute; 
+  width: 100%;
+  z-index: -1;
+  @media (min-width: $tablet) {
+    display: none;
+  }
+}
