--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,6 +3,9 @@
     background-repeat: no-repeat;
     background-size: 100%;
     height: 100%;
+    @media (min-width: $tablet) {
+        background-image: url(/images/bg-1.svg);
+    }
 }
 
 .page-nav__section {
