--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -52,7 +52,7 @@
     height: 831px;
     left: 561px;
     top: -340px;
-    z-index: -20;
+    pointer-events: none;
   }
 }
 
@@ -221,5 +221,11 @@
   @media screen and (min-width: $pc) {
     width: 11px;
     height: 19px;
+  }
+}
+
+.pic {
+  @media (min-width: $tablet) {
+    display: none;
   }
 }
