Add mobile version

--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -1,16 +1,22 @@
 p,
 h2 {
-  margin: 0;
-  padding: 0;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .about-us {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+
+  @media screen and (max-width: 767.99px) {
+    margin-bottom: 42px;
+  }
 }
 
 .about-us__title {
-  width: 113px;
-  height: 65px;
   font-family: Caveat Brush;
   font-style: normal;
   font-weight: normal;
@@ -21,13 +27,21 @@ h2 {
   margin-bottom: 10px;
 
   @media screen and (min-width: 768px) and (max-width: 1280px) {
-    width: 76px;
-    height: 65px;
     font-size: 24px;
     line-height: 2.71;
     font-family: Caveat Brush;
     font-style: normal;
     font-weight: normal;
+  }
+
+  @media screen and (max-width: 767.99px) {
+    font-family: Caveat Brush;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 2.71;
+    text-align: center;
+    padding-left: 15px;
   }
 }
 
@@ -50,16 +64,29 @@ h2 {
     font-style: normal;
     font-weight: normal;
   }
+
+  @media screen and (max-width: 767.99px) {
+    width: 290px;
+    height: 242px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.25;
+    margin: auto;
+  }
 }
 
 .text-hidden {
-  @media screen and (max-width: 1279px) {
+  @media screen and (max-width: 1279.99px) {
     display: none;
   }
 }
 
 .about-us__wrapper {
-  margin-left: 76px;
+  @media screen and (min-width: 768 px) {
+    margin-left: 76px;
+  }
 }
 
 .about-us__img {
@@ -75,6 +102,11 @@ h2 {
   @media screen and (min-width: 768px) and (max-width: 1280px) {
     width: 329.65px;
     height: 352px;
+  }
+
+  @media screen and (max-width: 767.99 px) {
+    width: 290px;
+    height: 309.66px;
   }
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
