fixing mobile version

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -17,5 +17,6 @@
         we do and believe you will enjoy our cooking atmosphere!
       </p>
     </div>
+    <button class="about-us__button">Read more</button>
   </div>
 </section>
