--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -1,13 +1,5 @@
-p,
-h2 {
-  @media screen and (min-width: 768px) {
-    margin: 0;
-    padding: 0;
-  }
-}
-
 .about-us {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: flex;
   }
 
@@ -17,6 +9,7 @@ h2 {
 }
 
 .about-us__title {
+  display: contents;
   font-family: Caveat Brush;
   font-style: normal;
   font-weight: normal;
@@ -26,7 +19,7 @@ h2 {
   color: $text;
   margin-bottom: 10px;
 
-  @media screen and (min-width: 768px) and (max-width: 1280px) {
+  @media screen and (min-width: $tablet) and (max-width: $pc) {
     font-size: 24px;
     line-height: 2.71;
     font-family: Caveat Brush;
@@ -41,7 +34,6 @@ h2 {
     font-size: 24px;
     line-height: 2.71;
     text-align: center;
-    padding-left: 15px;
   }
 }
 
@@ -55,7 +47,7 @@ h2 {
   line-height: 1.22;
   color: $text;
 
-  @media screen and (min-width: 768px) and (max-width: 1280px) {
+  @media screen and (min-width: $tablet) and (max-width: $pc) {
     width: 336px;
     height: 242px;
     font-size: 16px;
@@ -73,7 +65,6 @@ h2 {
     font-weight: normal;
     font-size: 16px;
     line-height: 1.25;
-    margin: auto;
   }
 }
 
@@ -84,7 +75,16 @@ h2 {
 }
 
 .about-us__wrapper {
-  @media screen and (min-width: 768 px) {
+  @media screen and (max-width: 767.99px) {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-left: 24.35px;
+  }
+
+  @media screen and (min-width: 1279.99px) {
     margin-left: 76px;
   }
 }
@@ -99,7 +99,7 @@ h2 {
   margin-left: 71px;
   transform: translate(2%, -8%);
 
-  @media screen and (min-width: 768px) and (max-width: 1280px) {
+  @media screen and (min-width: $tablet) and (max-width: $pc) {
     width: 329.65px;
     height: 352px;
   }
@@ -131,5 +131,24 @@ h2 {
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url('../images/pic@2x.png');
     }
+  }
+}
+
+.about-us__button {
+  @media screen and (min-width: $pc) {
+    display: none;
+  }
+
+  @media screen and (max-width: 1279.99px) {
+    height: 65px;
+    font-family: Caveat Brush;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 3.61;
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    color: #ab816c;
   }
 }
